# passportai-mvp

./: .gitignore  BASLANGIC_REHBERI.md  PassportAI_MVP_Sprint_Guide.docx  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: b3f7a2e91d54_sprint1_cases_documents.py  c24086d64ec8_initial_schema.py  d5e8f3a72b91_sprint2_processing_pipeline.py  e7f9a4b83c12_sprint3_extraction_evidence.py  f8a5b6c93d17_sprint4_rules_checklist.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  cases.py  dashboard.py  documents.py  extraction.py  health.py  invites.py  processing.py  router.py  validation.py
backend/app/core/: auth.py  security.py
backend/app/models/: __init__.py  audit_log.py  buyer_supplier_link.py  case.py  checklist_item.py  document.py  document_page.py  evidence_anchor.py  extracted_field.py  invite.py  tenant.py  user.py  validation_result.py
backend/app/schemas/: auth.py  case.py  dashboard.py  document.py  extraction.py  invite.py  validation.py
backend/app/services/: audit.py  extraction.py  magic.py  metrics.py  pipeline.py  storage.py
backend/app/services/ai/: __init__.py  base.py  claude.py  composite.py  extractor.py  field_mapping.py  heuristic.py  mock_extractor.py
backend/scripts/: migrate_and_seed.py  seed_demo.py  seed_dev.py  seed_production.py
backend/tests/: test_sprint3_demo.py  test_sprint3_e2e.py  test_sprint4_e2e.py  test_sprint5_e2e.py
docs/: architecture.md  deploy.md  (+2 more)
(+32 files in other folders)
